--- a/frontend/src/sass/custom.scss
+++ b/frontend/src/sass/custom.scss
@@ -1,5 +1,3 @@
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
-
 $qp-primary: #626de0;
 $qp-primary-light: #979bff;
 $qp-primary-dark: #2442ad;
@@ -8,9 +6,18 @@ $qp-secondary-light: #ff609e;
 $qp-secondary-dark: #b40045;
 $qp-white: #fff;
 $qp-black: #000;
+$qp-grey: rgb(156, 147, 147);
+$qp-dark-grey: rgb(129, 122, 122);
 
 $qp-background: #f5f5f6;
 $qp-background2: #faf0d7;
+$qp-background-danger: #fad7d7;
+
+$primary: $qp-primary;
+$modal-md: 340px;
+$card-cap-bg: $qp-white;
+
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
 .btn-primary {
@@ -19,6 +26,10 @@ $qp-background2: #faf0d7;
 
 .btn-secondary {
     @include button-variant($qp-secondary, darken($qp-secondary, 7.5%), #fff, $qp-secondary-dark, lighten($qp-secondary, 10%), #fff);
+}
+
+.btn-grey {
+    @include button-variant($qp-grey, darken($qp-grey, 7.5%), #fff, $qp-dark-grey, lighten($qp-grey, 10%), #fff, darken($qp-grey, 15%), darken($qp-grey, 15%), #fff);
 }
 
 .page-body {
@@ -64,6 +75,7 @@ $qp-background2: #faf0d7;
 
 .home-page {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -71,11 +83,13 @@ $qp-background2: #faf0d7;
 }
 
 .app-header {
-    // position: relative;
-	// z-index: 1020;
 	background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(4px);
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+}
+
+.navbar .navbar-brand {
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.15);
 }
 
 .profile-card {
@@ -98,6 +112,22 @@ $qp-background2: #faf0d7;
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 1.2;
+}
+
+.questions-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    width: 50%;
+}
+
+.questions-page .card-header {
+    background-color: $qp-background2;
+}
+
+.delete-account-modal .modal-header {
+    background-color: $qp-background-danger;
 }
 
 
