--- a/frontend/src/sass/custom.scss
+++ b/frontend/src/sass/custom.scss
@@ -37,7 +37,7 @@ $table-cell-vertical-align: middle;
 
 .page-body {
     display: flex;
-    min-height: 100vh;
+    min-width: 100vh;
     align-items: center;
     color: $qp-black;
     flex-direction: column;
@@ -81,7 +81,6 @@ $table-cell-vertical-align: middle;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: 100%;
 }
 
 .app-header {
@@ -90,13 +89,42 @@ $table-cell-vertical-align: middle;
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.15);
 }
 
+.dropdown-toggle-text {
+    display: block;
+    width: 100%;
+    font-weight: 400;
+    color: #484f55;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+.dropdown-toggle-text:hover,
+.dropdown-toggle-text:focus {
+    color: #000000;
+}
+
+.dropdown-toggle-text.active,
+.dropdown-toggle-text:active {
+    text-decoration: none;
+}
+
+.dropdown-toggle-text.disabled,
+.dropdown-toggle-text:disabled {
+    color: #adb5bd;
+    pointer-events: none;
+    background-color: transparent;
+}
+
 .navbar .navbar-brand {
     text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.15);
 }
 
 .profile-card {
-    width: 40%;
-    min-width: 340px;
+    min-width: 40%;
+
     background-color: $qp-white;
     align-self: center;
     margin-top: 90px;
@@ -134,6 +162,16 @@ $table-cell-vertical-align: middle;
 
 .questions-page .table-wrapper {
     min-height: 275.38px;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem;
+}
+
+.empty-table-description {
+    font-size: 1.75rem;
+    font-weight: 400;
+    line-height: 1.2;
+    color: $qp-grey;
 }
 
 .questions-table {
