--- a/frontend/src/sass/custom.scss
+++ b/frontend/src/sass/custom.scss
@@ -11,6 +11,7 @@ $qp-dark-grey: rgb(129, 122, 122);
 
 $qp-background: #f5f5f6;
 $qp-background2: #faf0d7;
+$qp-background3: #dcdaf8;
 $qp-background-danger: #fad7d7;
 
 $primary: $qp-primary;
@@ -174,18 +175,18 @@ $table-cell-vertical-align: middle;
     color: $qp-grey;
 }
 
-.questions-table {
+.my-fixed-table {
     white-space: nowrap;
     table-layout: fixed;
 }
 
-.questions-table > thead > tr > th {
+.my-fixed-table > thead > tr > th {
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
     font-weight: 500;
 }
 
-.questions-table > tbody > tr > td {
+.my-fixed-table > tbody > tr > td {
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -215,4 +216,48 @@ $table-cell-vertical-align: middle;
     border-top: 1px solid currentColor;
 }
 
+.answers-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    width: 55%;
+}
 
+.answers-page .card-header {
+    background-color: $qp-background3;
+}
+
+.answers-page .table-wrapper {
+    min-height: 275.38px;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem;
+}
+
+.answers-table .from-user-col {
+    width: 30%;
+}
+
+.answers-table .question-col {
+    width: 30%;
+}
+
+.answers-table .answer-col {
+    width: 30%;
+}
+
+.answers-table .actions-col {
+    width: 10%;
+    text-align: right;
+}
+
+// .medium-text {
+//     font-size: 1.1rem;
+//     font-weight: 400;
+//     line-height: 1.2;
+// }
+
+.answer-dialog {
+    max-width: 380px;
+}
